--- a/src/html/games/rockpaperscissors/index.html
+++ b/src/html/games/rockpaperscissors/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
 @@include('../../../parts/head.html', {
-"title": "Запомни эти карты"
+"title": "Камень ножницы бумага"
 })
 <link rel="stylesheet" href="/css/page.css">
 
 <body>
     @@include('../../../parts/header.html', {
-    "activeItem": "games"
+
     })
 
     <main id="post--main" class="container post--font-size main--post">
@@ -44,36 +44,46 @@
         </div>
 
         <div class="container--post post--start-1">
-            <h1>Запомни эти карты</h1>
-            <p class="post--start-p">Первая игра для тренировки памяти.</p>
+            <h1>Камень ножницы бумага</h1>
+            <p class="post--start-p">Соревнуйся с друзьями уже сейчас.</p>
         </div>
 
         <figure class="post--start-img text-center">
-            <img src="/img/posts/g002/cap.jpg" class="img-fluid w-100" alt="Мобильная игра Запомни эти карты">
-            <figcaption class="img--desc">Мобильная игра Запомни эти карты</figcaption>
+            <img src="/img/posts/g004/cap.jpg" class="img-fluid w-100" alt="Мобильная игра Камень ножницы бумага">
+            <figcaption class="img--desc">Мобильная игра Камень ножницы бумага</figcaption>
         </figure>
 
         <div class="container--post">
             <p>
-                Забудьте о скучных методах тренировки памяти! Теперь вы можете с легкостью и с удовольствием находиться в стиле с нашей
-                новой игрой – Запомни эти карты!
+                Камень, ножницы, бумага, кажется, это игра, которая знакома каждому из нас с детства. Она проста, увлекательна, но
+                иногда может стать скучной, поэтому было создано множество различных вариаций этой игры. Сегодня я хочу рассказать вам о
+                мобильной игре «Камень, ножницы, бумага», которая позволяет сохранять ходы и переводить язык.
             </p>
             <p>
-                Здесь вы будете тренировать свою память, запоминая расположение карт, выстраивая свою
-                логику и улучшая свои результаты с каждым прохождением.
+                Самая замечательная фича этой игры это возможность сохранять ходы в игре. И это не просто сохранять, а сохранять
+                детальную информацию о каждом ходе. Вы можете видеть, какой выбор сделал ваш противник на каждом ходу в игре; это
+                позволяет вам определить его предпочтения и настроение. С помощью этой функции вы можете разрабатывать стратегии для
+                следующих игр.
             </p>
             <p>
-                Но это еще не все! Мы привносим вам возможность кастомизировать
-                свои карты и менять локации, чтобы вы могли наслаждаться процессом игры с новым взглядом каждый раз!
+                Еще одна отличная фича этой игры это возможность перевода на различные языки. У вас есть возможность настроить язык
+                интерфейса, чтобы он соответствовал вашему языку. Доступны несколько языков, включая русский и английский.
+                Это позволяет играть в игру на своем родном языке.
             </p>
             <p>
-                Откройте большое
-                количество карт и локаций, и каждый раз становитесь лучше и быстрее! Примите вызов, станьте чемпионом и покажите свои
-                навыки в Запомни эти карты!
+                Как мне кажется, игра «Камень ножницы бумага» является идеальным способом провести свободное время и развлечься. Она
+                проста в использовании, захватывающая и может стать отличным способом для того, чтобы общаться с друзьями и
+                социализироваться. Эта игра постоянно обновляется и развивается, и вы можете быть уверены, что вам не будет скучно при
+                игре в нее.
+            </p>
+            <p>
+                В заключение, игра «Камень ножницы бумага» с сохранением ходов и возможностью перевода на различные языки является
+                одной из лучших мобильных игр на рынке. Она имеет простой и легкий интерфейс, что позволяет любому человеку начать
+                играть в нее. Если вы еще не попробовали эту игру, рекомендую сделать это прямо сейчас. Уверен, вы не пожалеете!
             </p>
 
             <div class="d-flex justify-content-center">
-                <a href="//creagoo.ru/games/rememberthesecards/#download"
+                <a href="//creagoo.ru/games/rockpaperscissors/#download"
                     class="btn btn-dark px-4 col-md-4 justify-content-center py-2 d-flex text-decoration-none text-invert align-items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon-invert me-btn-1"
                         viewBox="0 0 16 16">
@@ -90,8 +100,8 @@
             </p>
         </div>
 
-        @@include('../../../parts/p--more-2.html', {
-            "active": "g-rememberthesecards"
+        @@include('../../../parts/p--more-3.html', {
+            "active": "g-rockpaperscissors"
         })
 
     </main>
