--- a/src/html/games/sweetness/index.html
+++ b/src/html/games/sweetness/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 @@include('../../../parts/head.html', {
-"title": "Babka On The Hunt: 2D Классика"
+"title": "Sweetness"
 })
 <link rel="stylesheet" href="/css/page.css">
 
@@ -44,63 +44,63 @@
         </div>
 
         <div class="container--post post--start-1">
-            <h1>Babka On The Hunt: 2D Классика</h1>
-            <p class="post--start-p">Описание лучшей мобильной игры.</p>
+            <h1>Sweetness</h1>
+            <p class="post--start-p">Ну очень красивая мобильная игра.</p>
         </div>
 
         <figure class="post--start-img text-center">
-            <img src="/img/posts/g001/cap.jpg" class="img-fluid w-100" alt="Мобильная игра Babka On The Hunt">
-            <figcaption class="img--desc">Мобильная игра Babka On The Hunt</figcaption>
+            <img src="/img/posts/g003/cap.jpg" class="img-fluid w-100" alt="Мобильная игра Sweetness">
+            <figcaption class="img--desc">Мобильная игра Sweetness</figcaption>
         </figure>
 
         <div class="container--post">
             <p>
-                Вы когда-нибудь задумывались, как было бы интересно отправиться в путешествие по России вместе с бабушкой? Теперь у вас
-                есть такая возможность – в мобильной игре "Бабушка на охоте"!
+                Sweetness – это увлекательная мобильная игра, в которой ты играешь за маленького исследователя, который путешествует по
+                большому и неизвестному миру, чтобы найти самый сладкий сахар.
             </p>
             <p>
-                В этой увлекательной игре вы будете играть за бабушку, которая отправляется в путешествие по разным локациям России. Вам
-                предстоит посетить такие места, как Павловский Посад, больница, дом бабушки, планета Эксолон и даже лицей МФТИ им.
-                Капицы!
+                Твой герой – настоящий авантюрист, готовый исследовать все уголки этой волшебной страны, чтобы найти настоящий рай для
+                сладкоежек. Ему придется преодолеть много препятствий, обойти ловушки и победить всех врагов на своем пути. Но когда он
+                наконец найдет свой ценный трофей, все это окупится!
             </p>
             <p>
-                Каждая локация представляет собой уникальный мир, где вас ждут интересные задания и приключения. Например, в больнице вы
-                должны помочь бабушке найти свою родственницу, которая заблудилась в коридорах больницы. А на планете Эксолон вы будете
-                искать детали для постройки космического корабля, чтобы вернуться на Землю.
+                Игра позволит тебе пройти увлекательное путешествие по миру различных локаций – от лесов и пустынь до городов и древних
+                замков. Каждая локация будет иметь свои особенности, а множество различных препятствий, забавных персонажей и
+                таинственных секретов не позволят тебе скучать.
             </p>
             <p>
-                В игре вы будете использовать различные предметы и инструменты, чтобы решить головоломки и пройти уровни. Например, вы
-                можете использовать клюшку для гольфа, чтобы достать ключ из колодца, или использовать телефон, чтобы найти нужную
-                информацию.
+                В Sweetness ты найдешь множество узнаваемых элементов от других игр: сбор монет, уклонение от ловушек и преодоление
+                препятствий. Но что делает эту игру такой особенной, это герой – маленький исследователь со своей слабостью к сладостям.
+                Он может проходить уровни благодаря своей любви к сахару – собирая конфеты и сладости на своем пути. Кроме того, на
+                своем пути он может обнаружить различные шоколадные монеты, которые помогут ему приобрести дополнительные умения и
+                преодолеть трудности.
             </p>
             <p>
-                "Бабушка на охоте" – это не только увлекательная игра, но и замечательная возможность познакомиться с разными местами
-                России и узнать больше о культуре и традициях страны.
-            </p>
-            <p>
-                Так что не ждите – отправляйтесь в путешествие вместе с бабушкой уже сегодня! Скачайте "Бабушка на охоте" на свой
-                мобильный телефон и наслаждайтесь приключениями!
+                Игра Sweetness создана для тех, кто любит испытывать свои способности, брать на себя риски и находить новые приключения
+                на своем пути. Это идеальная игра для всех, кто готов с новыми силами и с огромной любовью продолжить свои сахарные
+                приключения.
             </p>
 
             <div class="d-flex justify-content-center">
-                <a href="//creagoo.ru/games/babkaonthehuntclassic/#download"
+                <a href="//creagoo.ru/games/sweetness/#download"
                     class="btn btn-dark px-4 col-md-4 justify-content-center py-2 d-flex text-decoration-none text-invert align-items-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon-invert me-btn-1" viewBox="0 0 16 16">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon-invert me-btn-1"
+                        viewBox="0 0 16 16">
                         <path fill-rule="evenodd"
                             d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z" />
-                        </svg>
+                    </svg>
                     Скачать сейчас
                 </a>
             </div>
-
         </div>
 
         <div class="container--post post--more">
-            <p class="post--more-text mb-0">Текст написан с помощью технологии GPT-4.</p>
+            <p class="post--more-text mb-0">Текст написан с помощью технологии GPT-4.
+            </p>
         </div>
 
-        @@include('../../../parts/p--more-1.html', {
-            "active": "g-babkaonthehuntclassic"
+        @@include('../../../parts/p--more-2.html', {
+        "active": "g-sweetness"
         })
 
     </main>
