--- a/src/html/p/experience-using-iphone-6s-for-six-months/index.html
+++ b/src/html/p/experience-using-iphone-6s-for-six-months/index.html
@@ -144,6 +144,10 @@
             </p>
         </div>
 
+        @@include('../../../parts/p--more-1.html', {
+        "active": "p-experience-using-iphone-6s-for-six-months"
+        })
+
     </main>
 
     <script src="/js/post.js"></script>
