--- a/src/html/p/how-I-develop-websites-in-php/index.html
+++ b/src/html/p/how-I-develop-websites-in-php/index.html
@@ -195,6 +195,10 @@
             </p>
         </div>
 
+        @@include('../../../parts/p--more-2.html', {
+        "active": "p-how-I-develop-websites-in-php"
+        })
+
     </main>
 
     <script src="/js/post.js"></script>
