--- a/src/html/p/how-I-fight-against-burnout/index.html
+++ b/src/html/p/how-I-fight-against-burnout/index.html
@@ -117,6 +117,10 @@
             </p>
         </div>
 
+        @@include('../../../parts/p--more-1.html', {
+        "active": "p-how-I-fight-against-burnout"
+        })
+
     </main>
 
     <script src="/js/post.js"></script>
