--- a/src/html/p/how-did-I-start-learning-programming/index.html
+++ b/src/html/p/how-did-I-start-learning-programming/index.html
@@ -134,6 +134,10 @@
             </p>
         </div>
 
+        @@include('../../../parts/p--more-3.html', {
+        "active": "p-how-did-I-start-learning-programming"
+        })
+
     </main>
 
     <script src="/js/post.js"></script>
