--- a/src/html/p/macbook-pro-2014-13-review/index.html
+++ b/src/html/p/macbook-pro-2014-13-review/index.html
@@ -308,6 +308,10 @@
             </p>
         </div>
 
+        @@include('../../../parts/p--more-2.html', {
+        "active": "p-macbook-pro-2014-13-review"
+        })
+
     </main>
 
     <script src="/js/post.js"></script>
