--- a/src/html/p/pet-project-development-what-is-it-and-for-what/index.html
+++ b/src/html/p/pet-project-development-what-is-it-and-for-what/index.html
@@ -94,6 +94,10 @@
             </p>
         </div>
 
+        @@include('../../../parts/p--more-3.html', {
+        "active": "p-pet-project-development-what-is-it-and-for-what"
+        })
+
     </main>
 
     <script src="/js/post.js"></script>
