--- a/src/html/p/project-development-history-live.creagoo.ru-its-forced-closure/index.html
+++ b/src/html/p/project-development-history-live.creagoo.ru-its-forced-closure/index.html
@@ -147,6 +147,10 @@
             </p>
         </div>
 
+        @@include('../../../parts/p--more-3.html', {
+        "active": "p-project-development-history-live.creagoo.ru-its-forced-closure"
+        })
+
     </main>
 
     <script src="/js/post.js"></script>
