--- a/src/html/p/the-new-generation-of-the-iphone-xr-device/index.html
+++ b/src/html/p/the-new-generation-of-the-iphone-xr-device/index.html
@@ -125,6 +125,10 @@
             </p>
         </div>
 
+        @@include('../../../parts/p--more-3.html', {
+        "active": "p-the-new-generation-of-the-iphone-xr-device"
+        })
+
     </main>
 
     <script src="/js/post.js"></script>
