--- a/src/html/p/the-path-of-a-programmer-is-a-difficult-path/index.html
+++ b/src/html/p/the-path-of-a-programmer-is-a-difficult-path/index.html
@@ -163,6 +163,10 @@
             </p>
         </div>
 
+        @@include('../../../parts/p--more-3.html', {
+        "active": "p-the-path-of-a-programmer-is-a-difficult-path"
+        })
+
     </main>
 
     <script src="/js/post.js"></script>
