--- a/src/html/updates.html
+++ b/src/html/updates.html
@@ -20,9 +20,29 @@
             <h1>Обновления Special</h1>
         </div>
         <div class="fs-5 mb-5">
+            <p class="text--more fs-6">Изменения 19.03.23</p>
+            <ul>
+                <li>Улучшено визуальное состовляющее</li>
+                <li>Упрощен дизайн</li>
+                <li>Улучшена логика работы платформы.</li>
+            </ul>
+        </div>
+        <div class="fs-5 mb-5">
+            <p class="text--more fs-6">Изменения 18.03.23</p>
+            <ul>
+                <li>Используется технология GPT-4 в статьях</li>
+                <li>Возможность написать статью пользователю.</li>
+            </ul>
+        </div>
+        <div class="fs-5 mb-5">
             <p class="text--more fs-6">Изменения 17.03.23</p>
             <ul>
-                <li>Смена активного шрифта на сайте.</li>
+                <li>Смена активного шрифта на сайте</li>
+                <li>Обновление отображения страниц</li>
+                <li>Список статей в конце активной</li>
+                <li>Работа над переводом сайта</li>
+                <li>Изменения в футере</li>
+                <li>Добавлена категория «Игры».</li>
             </ul>
         </div>
         <div class="fs-5 mb-5">
