--- a/src/html/updates/creagoo/novyy-sayt-creagoo-ru/index.html
+++ b/src/html/updates/creagoo/novyy-sayt-creagoo-ru/index.html
@@ -177,6 +177,10 @@
             </p>
         </div>
 
+        @@include('../../../../parts/p--more-1.html', {
+            "active": "u-novyy-sayt-creagoo-ru"
+        })
+
     </main>
 
     <script src="/js/post.js"></script>
