--- a/src/html/write-post.html
+++ b/src/html/write-post.html
@@ -12,21 +12,23 @@
     <main class="container">
 
         <div class="border-bottom mb-5">
-            <h1>Ссылки Special</h1>
+            <h1>Написать статью</h1>
         </div>
         <div class="fs-5 mb-5">
 
             <ul class="mb-4">
-                <li>О проекте Special (текущая страница)</li>
+                <li><a href="/about.html" class="link">
+                    О проекте Special
+                </a></li>
                 <li><a href="/updates.html" class="link">
                         Обновления Special
                     </a></li>
                 <li><a href="/rss.xml" class="link">
                         Получить RSS статей
                     </a></li>
-                <li><a href="/write-post.html" class="link">
-                        Написать статью
-                    </a></li>
+                <li>
+                    Написать статью (текущая страница)
+                </li>
                 <li><a href="/translate.html" class="link">
                         Перевод сайта
                     </a></li>
@@ -44,11 +46,13 @@
             <h2>Что такое Special?</h2>
             <p>
                 Special — это открытый источник медиа сайтов <a href="//dybka.ru" class="link">dybka.ru</a>,
-                <a href="//it.dybka.ru" class="link">it.dybka.ru</a>, <a href="//creagoo.ru" class="link">creagoo.ru</a> и других,
+                <a href="//it.dybka.ru" class="link">it.dybka.ru</a>, <a href="//creagoo.ru" class="link">creagoo.ru</a>
+                и других,
                 принадлежащих Даниилу Дыбка (<a href="//dybka.ru" class="link">dybka.ru</a>).
             </p>
             <p>
-                Главная задача сайта Special — простым языком и удобными способами доносить полезную информацию до людей.
+                Главная задача сайта Special — простым языком и удобными способами доносить полезную информацию до
+                людей.
                 Сайт Special предоставляет удобный доступ к чтению статей. Выбор, на какой платформе производить чтение
                 находится за Вами.
             </p>
@@ -128,22 +132,27 @@
             <h2>Техническая оптимизация</h2>
             <p>
                 Большое количество внимания было уделено на активную оптимизацию загрузки сайта, доступности содержимого
-                с клавиатуры, адаптивного отображения сайта на разных девайсах, возможности ознакомиться с содержимым при разных условиях.
+                с клавиатуры, адаптивного отображения сайта на разных девайсах, возможности ознакомиться с содержимым
+                при разных условиях.
             </p>
             <p>
-                Вышеперечисленные критерии не являются обязательными, это факт. В создании сайта есть лишь «рекомендации».
-                Но также существуют и отличия между хорошим сайтом и плохим. Плохим сайтом не хочется пользоваться, тогда какой
+                Вышеперечисленные критерии не являются обязательными, это факт. В создании сайта есть лишь
+                «рекомендации».
+                Но также существуют и отличия между хорошим сайтом и плохим. Плохим сайтом не хочется пользоваться,
+                тогда какой
                 смысл от этого сайта, если пользователь не хочет получать информацию от сайта?
             </p>
             <p>
-                Активно уделяется внимание пользователю. Существует большое количество людей, которые тестируют отображение сайта. Это
+                Активно уделяется внимание пользователю. Существует большое количество людей, которые тестируют
+                отображение сайта. Это
                 действительно важные факторы, которые помогают пользователям дольше оставаться на сайте.
             </p>
         </div>
         <div class="fs-5 mb-5">
             <h2>Доступность сайта</h2>
             <p>
-                Сайт Special доступен для всех пользователей. Имеется возможность перемещаться по элементам с помощью клавиатуры
+                Сайт Special доступен для всех пользователей. Имеется возможность перемещаться по элементам с помощью
+                клавиатуры
                 и получать доступ о информации интерактивных элементах. Настроена возможность использования программ для
                 чтения текста с экрана. Прописаны параметры-описания для изображений, чтобы все люди могли узнать, о чем
                 нам говорит размещенная на сайте картинка.
@@ -168,7 +177,8 @@
         <div class="fs-5 mb-5">
             <h2>Автор</h2>
             <p>
-                Сайт разрабатывается Даниилом Дыбка (<a href="//dybka.ru" target="_blank"class="link">dybka.ru</a>) с 15.01.2022 года.
+                Сайт разрабатывается Даниилом Дыбка (<a href="//dybka.ru" target="_blank" class="link">dybka.ru</a>) с
+                15.01.2022 года.
             </p>
         </div>
     </main>
