--- a/src/parts/footer.html
+++ b/src/parts/footer.html
@@ -90,8 +90,8 @@
                 </div>
                 <div class="col header--adaptive-nav">
                     <div class="d-flex flex-wrap flex-column">
+                        <div><a href="/write-post.html" class="footer--more-link">Написать статью</a></div>
                         <div><a href="/rss.xml" class="footer--more-link">RSS статей</a></div>
-                        <div><a href="/updates.xml" class="footer--more-link">RSS обновлений</a></div>
                     </div>
                 </div>
                 <div class="col header--adaptive-nav">
