--- a/src/parts/p--articles.html
+++ b/src/parts/p--articles.html
@@ -2,7 +2,7 @@
     <div class="row row-cols-1 row-cols-lg-2 gx-3">
         <div class="col pb-3 mb-sm-0">
             <a href="/p/the-path-of-a-programmer-is-a-difficult-path" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p001@min.jpg" class="card-img" alt="...">
+                <img src="/img/posts/p001@min.jpg" class="card-img" alt="Ноутбук с открытой крышкой">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Путь программиста — это трудный
                         путь?</p>
@@ -83,6 +83,38 @@
                 <img src="/img/updates/creagoo.jpg" class="card-img" alt="Фотография логотипа Creagoo">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Новый сайт creagoo.ru</p>
+                </div>
+            </a>
+        </div>
+        <div class="col pb-3 mb-sm-0">
+            <a href="/games/babkaonthehuntclassic" class="card card--link card--rounded border-0">
+                <img src="/img/posts/g001/cap.jpg" class="card-img" alt="Мобильная игра Babka On The Hunt">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <p class="card-title text-white mt-auto card--title card--title-2">Babka On The Hunt</p>
+                </div>
+            </a>
+        </div>
+        <div class="col pb-3 mb-sm-0">
+            <a href="/games/sweetness" class="card card--link card--rounded border-0">
+                <img src="/img/posts/g003/cap.jpg" class="card-img" alt="Мобильная игра Sweetness">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <p class="card-title text-white mt-auto card--title card--title-2">Sweetness</p>
+                </div>
+            </a>
+        </div>
+        <div class="col pb-3 mb-sm-0">
+            <a href="/games/rememberthesecards" class="card card--link card--rounded border-0">
+                <img src="/img/posts/g002/cap.jpg" class="card-img" alt="Мобильная игра Запомни эти карты">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <p class="card-title text-white mt-auto card--title card--title-2">Запомни эти карты</p>
+                </div>
+            </a>
+        </div>
+        <div class="col pb-3 mb-sm-0">
+            <a href="/games/rockpaperscissors" class="card card--link card--rounded border-0">
+                <img src="/img/posts/g004/cap.jpg" class="card-img" alt="Мобильная игра Камень ножницы бумага">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <p class="card-title text-white mt-auto card--title card--title-2">Камень ножницы бумага</p>
                 </div>
             </a>
         </div>
