--- a/src/parts/p--main.html
+++ b/src/parts/p--main.html
@@ -1,10 +1,18 @@
 <div class="container container--main">
     <div class="row row-cols-1 row-cols-lg-1 gx-2 g-lg-3">
-        <div class="col pb-3 mb-sm-0">
+        <!-- <div class="col pb-3 mb-sm-0">
             <a href="/p/the-path-of-a-programmer-is-a-difficult-path" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p001@min.jpg" class="card-img" alt="...">
+                <img src="/img/posts/p001@min.jpg" class="card-img" alt="Ноутбук с открытой крышкой">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-1">Путь программиста — это трудный путь?</p>
+                </div>
+            </a>
+        </div> -->
+        <div class="col pb-3 mb-sm-0">
+            <a href="/games/babkaonthehuntclassic" class="card card--link card--rounded border-0">
+                <img src="/img/posts/g001/cap.jpg" class="card-img" alt="Мобильная игра Babka On The Hunt">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <p class="card-title text-white mt-auto card--title card--title-1">Babka On The Hunt</p>
                 </div>
             </a>
         </div>
@@ -14,34 +22,34 @@
 <div class="container container--main">
     <div class="row row-cols-1 row-cols-lg-2 gx-3">
         <div class="col pb-3 mb-sm-0">
-            <a href="/p/project-development-history-live.creagoo.ru-its-forced-closure" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p003.jpg" class="card-img" alt="Фотография логотипа Creagoo">
+            <a href="/games/sweetness" class="card card--link card--rounded border-0">
+                <img src="/img/posts/g003/cap.jpg" class="card-img" alt="Мобильная игра Sweetness">
                 <div class="card-img-overlay card--bg-gradient d-flex">
-                    <p class="card-title text-white mt-auto card--title card--title-2">История live.creagoo.ru</p>
+                    <p class="card-title text-white mt-auto card--title card--title-2">Sweetness</p>
                 </div>
             </a>
         </div>
         <div class="col pb-3 mb-sm-0">
-            <a href="/p/how-did-i-start-learning-programming" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p004.jpg" class="card-img" alt="Фотография с кодом программиста">
+            <a href="/games/rememberthesecards" class="card card--link card--rounded border-0">
+                <img src="/img/posts/g002/cap.jpg" class="card-img" alt="Мобильная игра Запомни эти карты">
                 <div class="card-img-overlay card--bg-gradient d-flex">
-                    <p class="card-title text-white mt-auto card--title card--title-2">С чего я начал изучать программирование</p>
+                    <p class="card-title text-white mt-auto card--title card--title-2">Запомни эти карты</p>
                 </div>
             </a>
         </div>
         <div class="col pb-3 mb-sm-0">
-            <a href="/p/how-i-fight-against-burnout" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p005.jpg" class="card-img" alt="Девушка выгорела на фотографии">
+            <a href="/games/rockpaperscissors" class="card card--link card--rounded border-0">
+                <img src="/img/posts/g004/cap.jpg" class="card-img" alt="Мобильная игра Камень ножницы бумага">
                 <div class="card-img-overlay card--bg-gradient d-flex">
-                    <p class="card-title text-white mt-auto card--title card--title-2">Как я борюсь против выгорания</p>
+                    <p class="card-title text-white mt-auto card--title card--title-2">Камень ножницы бумага</p>
                 </div>
             </a>
         </div>
         <div class="col pb-3 mb-sm-0">
-            <a href="/p/how-i-develop-websites-in-php" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p006.jpg" class="card-img" alt="Открытый код программы">
+            <a href="/updates/creagoo/novyy-sayt-creagoo-ru" class="card card--link card--rounded border-0">
+                <img src="/img/updates/creagoo.jpg" class="card-img" alt="Фотография логотипа Creagoo">
                 <div class="card-img-overlay card--bg-gradient d-flex">
-                    <p class="card-title text-white mt-auto card--title card--title-2">Как я разрабатываю сайты на PHP</p>
+                    <p class="card-title text-white mt-auto card--title card--title-2">Новый сайт creagoo.ru</p>
                 </div>
             </a>
         </div>
@@ -74,14 +82,6 @@
                 <img src="/img/posts/p010.jpg" class="card-img" alt="Открытый код программы">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Разработка pet-проектов - что это и для чего?</p>
-                </div>
-            </a>
-        </div>
-        <div class="col pb-3 mb-sm-0">
-            <a href="/updates/creagoo/novyy-sayt-creagoo-ru" class="card card--link card--rounded border-0">
-                <img src="/img/updates/creagoo.jpg" class="card-img" alt="Фотография логотипа Creagoo">
-                <div class="card-img-overlay card--bg-gradient d-flex">
-                    <p class="card-title text-white mt-auto card--title card--title-2">Новый сайт creagoo.ru</p>
                 </div>
             </a>
         </div>
