change design font size editor at page

--- a/src/html/p/macbook-pro-2014-13-review/index.html
+++ b/src/html/p/macbook-pro-2014-13-review/index.html
@@ -41,7 +41,7 @@
             </div>
         </div>
 
-        <div class="container--post post--start-1">
+        <div class="container--post ">
             <h1>Macbook Pro 2014 13' — обзор</h1>
             <p class="post--start-p">Мое самое любимое устройство.</p>
         </div>
