--- a/src/html/games/rememberthesecards/index.html
+++ b/src/html/games/rememberthesecards/index.html
@@ -47,8 +47,8 @@
 
             <div class="d-flex justify-content-center">
                 <a href="//creagoo.ru/games/rememberthesecards/#download"
-                    class="btn btn-dark px-4 col-md-4 justify-content-center py-2 d-flex text-decoration-none text-invert align-items-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon-invert me-btn-1"
+                    class="btn btn-dark px-4 justify-content-center py-2 d-flex fs-4 text-decoration-none text-invert align-items-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="27" height="27" class="icon-invert me-3"
                         viewBox="0 0 16 16">
                         <path fill-rule="evenodd"
                             d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z" />
