--- a/src/parts/p--font-size.html
+++ b/src/parts/p--font-size.html
@@ -1,11 +1,11 @@
 <div class="container container--post">
     <div class="d-flex justify-content-end align-items-center">
         <div>
-            <button onClick="PostTextUp()" aria-label="Увеличить размер шрифта на сайте"
+            <button onClick="PostTextDown()" aria-label="Уменьшить размер шрифта на сайте"
                 class="btn btn-dark px-4 py-2 d-flex text-decoration-none btn-post--btn text-invert align-items-center">
                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" class="icon-invert" viewBox="0 0 16 16">
                     <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
-                    <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z" />
+                    <path d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z" />
                 </svg>
             </button>
         </div>
@@ -16,11 +16,12 @@
             </svg>
         </div>
         <div>
-            <button onClick="PostTextDown()" aria-label="Уменьшить размер шрифта на сайте"
+            <button onClick="PostTextUp()" aria-label="Увеличить размер шрифта на сайте"
                 class="btn btn-dark px-4 py-2 d-flex text-decoration-none btn-post--btn text-invert align-items-center">
                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" class="icon-invert" viewBox="0 0 16 16">
                     <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
-                    <path d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z" />
+                    <path
+                        d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z" />
                 </svg>
             </button>
         </div>
