--- a/src/html/write-post.html
+++ b/src/html/write-post.html
@@ -38,43 +38,49 @@
             </ul>
         </div>
 
-        <div class="border-bottom mb-5">
-            <h1>О проекте Special</h1>
-        </div>
         <div class="fs-5 mb-5">
 
-            <h2>Что такое Special?</h2>
             <p>
-                Special — это открытый источник медиа сайтов <a href="//dybka.ru" class="link">dybka.ru</a>,
-                <a href="//it.dybka.ru" class="link">it.dybka.ru</a>, <a href="//creagoo.ru" class="link">creagoo.ru</a>
-                и других,
-                принадлежащих Даниилу Дыбка (<a href="//dybka.ru" class="link">dybka.ru</a>).
-            </p>
-            <p>
-                Главная задача сайта Special — простым языком и удобными способами доносить полезную информацию до
-                людей.
-                Сайт Special предоставляет удобный доступ к чтению статей. Выбор, на какой платформе производить чтение
-                находится за Вами.
+                У любого пользователя есть возможность получить его опубликованную статью на
+                сайте <a href="//news.creagoo.ru" class="link">news.creagoo.ru</a>
+                , если соблюдены правила публикации, о которых дальше пойдет речь.
             </p>
         </div>
         <div class="fs-5 mb-5">
             <h2>Стать автором</h2>
             <p>
-                У Вас есть возможность предложить интересную статью для сайта Special. Для
-                добавления Вас в качестве автора на сайте Special достаточно обратиться
-                на почтовый адрес <a href="mailto:daniil@dybka.ru" class="link">daniil@dybka.ru</a>.
+                Вам следует написать статью с названием (заголовком), коротким описанием,
+                основным содержанием (текстом) и изображением.
             </p>
+            <a href="/img/content/example_top.jpg" target="_blank" aria-label="Открыть изображение в новом окне">
+                <img src="/img/content/example_top.jpg" class="default-border-image shadow-sm mb-4 mt-1 col-md-10" alt="Формат записи">
+            </a>
             <p>
-                К заявке на почтовый адрес Вам следует прикрепить следующие материалы: название поста, содержимое поста
-                (в содержимом укажите, что является текстом, а что названием), фотографию поста.
+                Формат записи:
             </p>
+            <ul>
+                <li>
+                    Название (заголовок) не должен превышать 90-ста символов и обязателен.
+                </li>
+                <li>
+                    Короткое описание не должно превышать 42-х символов и не обязательно.
+                </li>
+                <li>
+                    Изображение записи должно быть разрешением 1200:600 и соотношением сторон 2:1 соответственно,
+                    обязательно к записи.
+                </li>
+                <li>
+                    Текст записи может быть любым по размеру, обязателен к записи.
+                </li>
+            </ul>
+        </div>
+        <div class="fs-5 mb-5">
+            <h2>Как опубликовать статью?</h2>
             <p>
-                Также нужно будет указать Ваше имя, фамилию и желаемую аватарку (128x128), которая будет отображаться
-                на Вашей странице автора статей.
-            </p>
-            <p>
-                Ваша заявка будет рассмотрена. В случае положительной проверки
-                Ваш пост будет опубликован на сайте Special.
+                Для публикации статьи следует направить приложенный материал к письму на почту:
+                <a href="mailto:daniil@dybka.ru" class="link">daniil@dybka.ru</a>.
+                Приложенная статья будет рассмотрена, после рассмотрения Вам будет
+                прислан ответ.
             </p>
         </div>
         <div class="fs-5 mb-5">
@@ -95,45 +101,12 @@
             </p>
         </div>
         <div class="fs-5 mb-5">
-            <h2>Реклама на сайте</h2>
+            <h2>Страница автора</h2>
             <p>
-                На сайте медиа Special у Вас есть возможность заказать рекламу. Вам следует обратиться
-                на почтовый адрес <a href="mailto:daniil@dybka.ru" class="link">daniil@dybka.ru</a>.
-            </p>
-            <p>
-                Свяжитесь по почтовому адресу, опишите Ваше предложение. Также укажите формат, в котором
-                Вы хотите видеть рекламу. В случае одобрения публикации рекламы, медиа Special выполнит
-                Ваши требования по публикации рекламы на сайте медиа Special.
-            </p>
-        </div>
-        <div class="fs-5 mb-5">
-            <h2>Запрещено к рекламе</h2>
-            <p>
-                К рекламе запрещены все темы, являющиеся запрещенными на территории РФ. В случае с
-                медиа Special запрещены для рекламы: запрещенные средства, продукты 18+,
-                различные казино, букмекерские компании, платформы, в основе которых лежит
-                обман пользователей.
-            </p>
-            <p>
-                В том случае, если Ваш продукт не несет целей обмануть аудиторию, заработать на этом
-                и не является запрещенным на территории РФ и на сайте Special, то Вы можете рассчитывать
-                на публикацию рекламы, в случае заинтересованности с обеих сторон (Вашей и медиа Special).
-            </p>
-        </div>
-        <div class="fs-5 mb-5">
-            <h2>Безопастность сайта</h2>
-            <p>
-                Доменный адрес использует защищенный протокол подключения. Используется SSL-сертификат для
-                безопастного и быстрого подключения и получения информации. Страницы сайта формируются
-                до публикации и являются «статическими».
-            </p>
-        </div>
-        <div class="fs-5 mb-5">
-            <h2>Техническая оптимизация</h2>
-            <p>
-                Большое количество внимания было уделено на активную оптимизацию загрузки сайта, доступности содержимого
-                с клавиатуры, адаптивного отображения сайта на разных девайсах, возможности ознакомиться с содержимым
-                при разных условиях.
+                Если Вашу статью одобрили к публикации — для Вас будет создана странциа автора.
+                Вас попросят прислать Вашу фотографию, которая будет приложена к странице автора.
+                Важно: фотография может быть только Вашего лица, другие фотографии не принимаются.
+                По умолчанию будет стоять фотография с Вашими инициалами: имени и фамилии.
             </p>
             <p>
                 Вышеперечисленные критерии не являются обязательными, это факт. В создании сайта есть лишь
@@ -148,39 +121,9 @@
                 действительно важные факторы, которые помогают пользователям дольше оставаться на сайте.
             </p>
         </div>
-        <div class="fs-5 mb-5">
-            <h2>Доступность сайта</h2>
-            <p>
-                Сайт Special доступен для всех пользователей. Имеется возможность перемещаться по элементам с помощью
-                клавиатуры
-                и получать доступ о информации интерактивных элементах. Настроена возможность использования программ для
-                чтения текста с экрана. Прописаны параметры-описания для изображений, чтобы все люди могли узнать, о чем
-                нам говорит размещенная на сайте картинка.
-            </p>
-        </div>
-        <div class="fs-5 mb-5">
-            <h2>Исходники</h2>
-            <ul>
-                <li><a href="/download/special-dark.zip" class="link">Логотип черный</a></li>
-                <li><a href="/download/special-white.zip" class="link">Логотип белый</a></li>
-            </ul>
-        </div>
-        <div class="fs-5 mb-5">
-            <h2>Шрифты</h2>
-            <p>
-                На сайте используется шрифт MenorahGrotesk начертания Bold для заголовков.
-            </p>
-            <p>
-                На сайте используется шрифт NotoSans начертаний Regular, Medium и Bold для остального текста.
-            </p>
-        </div>
-        <div class="fs-5 mb-5">
-            <h2>Автор</h2>
-            <p>
-                Сайт разрабатывается Даниилом Дыбка (<a href="//dybka.ru" target="_blank" class="link">dybka.ru</a>) с
-                15.01.2022 года.
-            </p>
-        </div>
+        <p>
+            Актуальность на 19.03.2023.
+        </p>
     </main>
 
     @@include('../parts/footer.html', {
