--- a/src/parts/header.html
+++ b/src/parts/header.html
@@ -103,7 +103,7 @@
                     </div>
                     <div class="header--adaptive-button">
                         <div class="text-invert-dark btn-rounded fs-5">
-                            <a href="//id.creagoo.ru" target="_blank" aria-label="Написать статью для спешиал"
+                            <a href="/write-post.html" aria-label="Написать статью для спешиал"
                                 class="btn btn-light px-4 d-flex header--button
                                 text-decoration-none text-invert-dark align-items-center">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
