work at sitemap

--- a/src/html/write-post.html
+++ b/src/html/write-post.html
@@ -42,7 +42,7 @@
 
             <p>
                 У любого пользователя есть возможность получить его опубликованную статью на
-                сайте <a href="//news.creagoo.ru" class="link">news.creagoo.ru</a>
+                сайте <a href="//news.dybka.ru" class="link">news.dybka.ru</a>
                 , если соблюдены правила публикации, о которых дальше пойдет речь.
             </p>
         </div>
