--- a/src/html/408.html
+++ b/src/html/408.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 @@include('../parts/head.html', {
-"title": "Страница не найдена"
+"title": "Превышение времени ожидания"
 })
 
 <style>
@@ -96,10 +96,13 @@
 
     <main class="form-signin w-100 m-auto d-flex text-center flex-column justify-content-center">
         <div class="d-flex justify-content-center">
-            <h1>408</h1>
+            <h1 class="display-4">408</h1>
         </div>
         <div class="d-flex justify-content-center">
-            <p class="fs-4 mb-4">Соединение закрыто</p>
+            <p class="fs-4 mb-2">Слишком долгий ответ</p>
+        </div>
+        <div id="text" class="mb-4">
+            Перенаправление через 3 сек.
         </div>
         <div class="d-flex justify-content-center">
             <a href="/" aria-label="Перейти на главную страницу" class="link">
@@ -108,6 +111,11 @@
         </div>
     </main>
 
+    <script>
+        setTimeout(function () {
+                window.location.href = '/';
+            }, 3000);
+    </script>
     <script src="/js/bg.js"></script>
     <script src="/js/theme.js"></script>
 </body>
