--- a/src/html/translate.html
+++ b/src/html/translate.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru">
 @@include('../parts/head.html', {
-"title": ""
+"title": "Перевод сайта Special"
 })
 
 <body>
     @@include('../parts/header.html', {
-    "activeItem": ""
+
     })
 
     <div class="container mb-3 text-center">
