--- a/src/html/updates.html
+++ b/src/html/updates.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 @@include('../parts/head.html', {
-"title": ""
+"title": "Обновления в сайте"
 })
 <style>
     .text--more {
