--- a/src/html/write-post.html
+++ b/src/html/write-post.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 @@include('../parts/head.html', {
-"title": ""
+"title": "Написать свою статью для медиа"
 })
 
 <body>
@@ -120,6 +120,10 @@
                 отображение сайта. Это
                 действительно важные факторы, которые помогают пользователям дольше оставаться на сайте.
             </p>
+            <a href="/img/content/example_author_page.jpg" target="_blank" aria-label="Открыть изображение в новом окне">
+                <img src="/img/content/example_author_page.jpg" class="default-border-image shadow-sm mb-4 mt-1 col-md-10"
+                    alt="Формат страницы автора">
+            </a>
         </div>
         <p>
             Актуальность на 19.03.2023.
