--- a/src/parts/footer.html
+++ b/src/parts/footer.html
@@ -21,7 +21,12 @@
         <div class="container mb-4 text-center">
             <div class="d-flex footer--adaptive-bottom flex-wrap">
                 <div class="col-md-2 footer--adaptive-bottom-1">
-                    <p class="card--title fs-4 mb-2 text-start">Читайте Special</p>
+                    <p class="card--title fs-4 mb-2 text-start">Читайте
+                        <a href="/" aria-label="Перейти на главную страницу"
+                        class="text-decoration-none card--title text-dark link">
+                            Special
+                        </a>
+                    </p>
                 </div>
                 <div class="col-md-10 footer--adaptive-bottom-2">
                     <div class="row row-cols-2 mb-2 row-cols-lg-4 g-2 g-lg-3 align-items-center">
