--- a/src/html/403.html
+++ b/src/html/403.html
@@ -96,10 +96,13 @@
 
     <main class="form-signin w-100 m-auto d-flex text-center flex-column justify-content-center">
         <div class="d-flex justify-content-center">
-            <h1>403</h1>
+            <h1 class="display-4">403</h1>
         </div>
         <div class="d-flex justify-content-center">
-            <p class="fs-4 mb-4">Нет доступа</p>
+            <p class="fs-4 mb-2">Нет доступа</p>
+        </div>
+        <div id="text" class="mb-4">
+            Перенаправление через 3 сек.
         </div>
         <div class="d-flex justify-content-center">
             <a href="/" aria-label="Перейти на главную страницу" class="link">
@@ -108,6 +111,11 @@
         </div>
     </main>
 
+    <script>
+        setTimeout(function () {
+            window.location.href = '/';
+        }, 3000);
+    </script>
     <script src="/js/bg.js"></script>
     <script src="/js/theme.js"></script>
 </body>
