add turbo and loading="lazy"

--- a/src/parts/p--updates.html
+++ b/src/parts/p--updates.html
@@ -3,7 +3,7 @@
         <div class="col pb-3 mb-sm-0">
             <a href="/updates/novyy-sayt-creagoo-ru"
                 class="card card--link card--rounded border-0">
-                <img src="/img/updates/creagoo.jpg" class="card-img" alt="Фотография логотипа Creagoo">
+                <img src="/img/updates/creagoo.jpg" loading="lazy" class="card-img" alt="Фотография логотипа Creagoo">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Новый сайт creagoo.ru</p>
                 </div>
