--- a/src/parts/p--articles.html
+++ b/src/parts/p--articles.html
@@ -20,7 +20,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/p/how-did-i-start-learning-programming" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p004.jpg" class="card-img" alt="Фотография с кодом программиста">
+                <img src="/img/posts/p004.jpg" loading="lazy" class="card-img" alt="Фотография с кодом программиста">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">С чего я начал изучать
                         программирование</p>
@@ -29,7 +29,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/p/how-i-fight-against-burnout" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p005.jpg" class="card-img" alt="Девушка выгорела на фотографии">
+                <img src="/img/posts/p005.jpg" loading="lazy" class="card-img" alt="Девушка выгорела на фотографии">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Как я борюсь против выгорания</p>
                 </div>
@@ -37,7 +37,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/p/how-i-develop-websites-in-php" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p006.jpg" class="card-img" alt="Открытый код программы">
+                <img src="/img/posts/p006.jpg" loading="lazy" class="card-img" alt="Открытый код программы">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Как я разрабатываю сайты на PHP
                     </p>
@@ -46,7 +46,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/p/the-new-generation-of-the-iphone-xr-device" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p007.jpg" class="card-img" alt="Телефон лежит на столе">
+                <img src="/img/posts/p007.jpg" loading="lazy" class="card-img" alt="Телефон лежит на столе">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Новое поколение устройства —
                         iPhone XR</p>
@@ -55,7 +55,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/p/macbook-pro-2014-13-review" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p008.jpg" class="card-img" alt="Приоткрытая крышка ноутбука">
+                <img src="/img/posts/p008.jpg" loading="lazy" class="card-img" alt="Приоткрытая крышка ноутбука">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Macbook Pro 2014 13' — обзор</p>
                 </div>
@@ -63,7 +63,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/p/experience-using-iphone-6s-for-six-months" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p009.jpg" class="card-img" alt="Телефон снимает фотографию">
+                <img src="/img/posts/p009.jpg" loading="lazy" class="card-img" alt="Телефон снимает фотографию">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Опыт использования iPhone 6s</p>
                 </div>
@@ -71,7 +71,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/p/pet-project-development-what-is-it-and-for-what" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p010.jpg" class="card-img" alt="Открытый код программы">
+                <img src="/img/posts/p010.jpg" loading="lazy" class="card-img" alt="Открытый код программы">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Разработка pet-проектов - что это
                         и для чего?</p>
@@ -80,7 +80,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/updates/novyy-sayt-creagoo-ru" class="card card--link card--rounded border-0">
-                <img src="/img/updates/creagoo.jpg" class="card-img" alt="Фотография логотипа Creagoo">
+                <img src="/img/updates/creagoo.jpg" loading="lazy" class="card-img" alt="Фотография логотипа Creagoo">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Новый сайт creagoo.ru</p>
                 </div>
@@ -88,7 +88,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/games/babkaonthehuntclassic" class="card card--link card--rounded border-0">
-                <img src="/img/posts/g001/cap.jpg" class="card-img" alt="Мобильная игра Babka On The Hunt">
+                <img src="/img/posts/g001/cap.jpg" loading="lazy" class="card-img" alt="Мобильная игра Babka On The Hunt">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Babka On The Hunt</p>
                 </div>
@@ -96,7 +96,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/games/sweetness" class="card card--link card--rounded border-0">
-                <img src="/img/posts/g003/cap.jpg" class="card-img" alt="Мобильная игра Sweetness">
+                <img src="/img/posts/g003/cap.jpg" loading="lazy" class="card-img" alt="Мобильная игра Sweetness">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Sweetness</p>
                 </div>
@@ -104,7 +104,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/games/rememberthesecards" class="card card--link card--rounded border-0">
-                <img src="/img/posts/g002/cap.jpg" class="card-img" alt="Мобильная игра Запомни эти карты">
+                <img src="/img/posts/g002/cap.jpg" loading="lazy" class="card-img" alt="Мобильная игра Запомни эти карты">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Запомни эти карты</p>
                 </div>
@@ -112,7 +112,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/games/rockpaperscissors" class="card card--link card--rounded border-0">
-                <img src="/img/posts/g004/cap.jpg" class="card-img" alt="Мобильная игра Камень ножницы бумага">
+                <img src="/img/posts/g004/cap.jpg" loading="lazy" class="card-img" alt="Мобильная игра Камень ножницы бумага">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Камень ножницы бумага</p>
                 </div>
