--- a/src/parts/p--games.html
+++ b/src/parts/p--games.html
@@ -2,7 +2,7 @@
     <div class="row row-cols-1 row-cols-lg-2 gx-3">
         <div class="col pb-3 mb-sm-0">
             <a href="/games/babkaonthehuntclassic" class="card card--link card--rounded border-0">
-                <img src="/img/posts/g001/cap.jpg" class="card-img" alt="Мобильная игра Babka On The Hunt">
+                <img src="/img/posts/g001/cap.jpg" loading="lazy" class="card-img" alt="Мобильная игра Babka On The Hunt">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Babka On The Hunt</p>
                 </div>
@@ -11,7 +11,7 @@
         <div class="col pb-3 mb-sm-0">
             <a href="/games/sweetness"
                 class="card card--link card--rounded border-0">
-                <img src="/img/posts/g003/cap.jpg" class="card-img" alt="Мобильная игра Sweetness">
+                <img src="/img/posts/g003/cap.jpg" loading="lazy" class="card-img" alt="Мобильная игра Sweetness">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Sweetness</p>
                 </div>
@@ -19,7 +19,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/games/rememberthesecards" class="card card--link card--rounded border-0">
-                <img src="/img/posts/g002/cap.jpg" class="card-img" alt="Мобильная игра Запомни эти карты">
+                <img src="/img/posts/g002/cap.jpg" loading="lazy" class="card-img" alt="Мобильная игра Запомни эти карты">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Запомни эти карты</p>
                 </div>
@@ -27,7 +27,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/games/rockpaperscissors" class="card card--link card--rounded border-0">
-                <img src="/img/posts/g004/cap.jpg" class="card-img" alt="Мобильная игра Камень ножницы бумага">
+                <img src="/img/posts/g004/cap.jpg" loading="lazy" class="card-img" alt="Мобильная игра Камень ножницы бумага">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Камень ножницы бумага</p>
                 </div>
