--- a/src/parts/p--main.html
+++ b/src/parts/p--main.html
@@ -1,13 +1,5 @@
 <div class="container container--main">
     <div class="row row-cols-1 row-cols-lg-1 gx-2 g-lg-3">
-        <!-- <div class="col pb-3 mb-sm-0">
-            <a href="/p/the-path-of-a-programmer-is-a-difficult-path" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p001@min.jpg" class="card-img" alt="Ноутбук с открытой крышкой">
-                <div class="card-img-overlay card--bg-gradient d-flex">
-                    <p class="card-title text-white mt-auto card--title card--title-1">Путь программиста — это трудный путь?</p>
-                </div>
-            </a>
-        </div> -->
         <div class="col pb-3 mb-sm-0">
             <a href="/games/babkaonthehuntclassic" class="card card--link card--rounded border-0">
                 <img src="/img/posts/g001/cap.jpg" class="card-img" alt="Мобильная игра Babka On The Hunt">
@@ -39,14 +31,14 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/games/rockpaperscissors" class="card card--link card--rounded border-0">
-                <img src="/img/posts/g004/cap.jpg" class="card-img" alt="Мобильная игра Камень ножницы бумага">
+                <img src="/img/posts/g004/cap.jpg" loading="lazy" class="card-img" alt="Мобильная игра Камень ножницы бумага">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Камень ножницы бумага</p>
                 </div>
             </a>
         </div>
         <div class="col pb-3 mb-sm-0">
-            <a href="/updates/novyy-sayt-creagoo-ru" class="card card--link card--rounded border-0">
+            <a href="/updates/novyy-sayt-creagoo-ru" loading="lazy" class="card card--link card--rounded border-0">
                 <img src="/img/updates/creagoo.jpg" class="card-img" alt="Фотография логотипа Creagoo">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Новый сайт creagoo.ru</p>
@@ -55,7 +47,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/p/the-new-generation-of-the-iphone-xr-device" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p007.jpg" class="card-img" alt="Телефон лежит на столе">
+                <img src="/img/posts/p007.jpg" loading="lazy" class="card-img" alt="Телефон лежит на столе">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Новое поколение устройства — iPhone XR</p>
                 </div>
@@ -63,7 +55,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/p/macbook-pro-2014-13-review" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p008.jpg" class="card-img" alt="Приоткрытая крышка ноутбука">
+                <img src="/img/posts/p008.jpg" loading="lazy" class="card-img" alt="Приоткрытая крышка ноутбука">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Macbook Pro 2014 13' — обзор</p>
                 </div>
@@ -71,7 +63,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/p/experience-using-iphone-6s-for-six-months" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p009.jpg" class="card-img" alt="Телефон снимает фотографию">
+                <img src="/img/posts/p009.jpg" loading="lazy" class="card-img" alt="Телефон снимает фотографию">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Опыт использования iPhone 6s</p>
                 </div>
@@ -79,7 +71,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/p/pet-project-development-what-is-it-and-for-what" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p010.jpg" class="card-img" alt="Открытый код программы">
+                <img src="/img/posts/p010.jpg" loading="lazy" class="card-img" alt="Открытый код программы">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Разработка pet-проектов - что это и для чего?</p>
                 </div>
