--- a/src/html/write-post.html
+++ b/src/html/write-post.html
@@ -53,7 +53,7 @@
                 основным содержанием (текстом) и изображением.
             </p>
             <a href="/img/content/example_top.jpg" target="_blank" aria-label="Открыть изображение в новом окне">
-                <img src="/img/content/example_top.jpg" class="default-border-image shadow-sm mb-4 mt-1 col-md-10" alt="Формат записи">
+                <img src="/img/content/example_top.jpg" class="default-border-image img-fluid shadow-sm mb-4 mt-1 col-md-10" alt="Формат записи">
             </a>
             <p>
                 Формат записи:
@@ -121,7 +121,7 @@
                 действительно важные факторы, которые помогают пользователям дольше оставаться на сайте.
             </p>
             <a href="/img/content/example_author_page.jpg" target="_blank" aria-label="Открыть изображение в новом окне">
-                <img src="/img/content/example_author_page.jpg" class="default-border-image shadow-sm mb-4 mt-1 col-md-10"
+                <img src="/img/content/example_author_page.jpg" class="default-border-image img-fluid shadow-sm mb-4 mt-1 col-md-10"
                     alt="Формат страницы автора">
             </a>
         </div>
